--- a/css/blocks/portfolio.less
+++ b/css/blocks/portfolio.less
@@ -23,13 +23,16 @@
     }
 }
 
+
+
+/*
 .portfolio__col:nth-child(1),
 .portfolio__col:nth-child(2),
 .portfolio__col:nth-child(3)
 {
     display: inline-block;
 }
-
+*/
 
 
 /*.portfolio__col:nth-child(n+9){
